feat : 마이페이지 상단 바 API 추가

--- a/src/components/MyPage/MyPageHeader.module.css
+++ b/src/components/MyPage/MyPageHeader.module.css
@@ -18,7 +18,9 @@
   border-radius: 50%;
   object-fit: cover;
   margin-right: 24px;
+  background-color: #D9D9D9; 
 }
+
 
 .infoBox {
   display: flex;
