--- a/src/components/MyPage/ProfileEditModal.module.css
+++ b/src/components/MyPage/ProfileEditModal.module.css
@@ -70,9 +70,19 @@
   height: 127px;
   border-radius: 50%;
   object-fit: cover;
-  background: #fff;
+  background: #D9D9D9; 
   border: none;
 }
+
+.profileImgPlaceholder {
+  width: 127px;
+  height: 127px;
+  border-radius: 50%;
+  background-color: #D9D9D9;
+  display: block;
+  object-fit: cover;
+}
+
 
 .profileImgClose {
   position: absolute;
