feat: 거래 완료 실시간 처리, 거래 완료 시 버튼 css 수정

--- a/src/components/Chat/ChatBottom/ChatBottom.module.css
+++ b/src/components/Chat/ChatBottom/ChatBottom.module.css
@@ -151,3 +151,8 @@ letter-spacing: -0.32px;
   background: #F3F3F3;
   border-radius: 50px;
 }
+
+.optionBtn:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
