--- a/src/components/PageNumber/Pagination.module.css
+++ b/src/components/PageNumber/Pagination.module.css
@@ -1,37 +1,44 @@
 .pagination {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-    margin: 30px 0 35px 0;
-  }
-  
-  .arrowButton {
-    background: none;
-    border: none;
-    padding: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    color: #666;
-  }
-  
-  .arrowButton:disabled {
-    color: #d1d1d1;
-    cursor: default;
-  }
-  
-  .pageNumber {
-    background: none;
-    border: none;
-    color: #d1d1d1;
-    font-family: Inter;
-    font-size: 13px;
-    font-weight: 500;
-    cursor: pointer;
-  }
-  
-  .activePage {
-    font-weight: 700; 
-    font-size: 15px;
-    color: #000000;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin: 30px 0 35px 0;
+}
+
+.arrowButton {
+  background: none;
+  border: none;
+  padding: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  color: #666;
+}
+
+.arrowButton:disabled {
+  color: #d1d1d1;
+  cursor: default;
+}
+
+.pageNumber {
+  background: none;
+  border: none;
+  color: #d1d1d1;
+  font-family: Inter;
+  font-size: 13px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.activePage {
+  font-weight: 700; 
+  font-size: 15px;
+  color: #000000;
+}
+
+.ellipsis {
+  color: #999;
+  font-size: 13px;
+  padding: 0 4px;
+  user-select: none;
+}
