--- a/src/components/ProductList/ProductSkeleton.module.css
+++ b/src/components/ProductList/ProductSkeleton.module.css
@@ -1,13 +1,10 @@
 .container {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  gap: 10px;
-  margin-top: 20px;
-  width: 100%;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 10px;
+    width: 100%;
+    padding: 0 65px;
 }
 
 .productCard {
@@ -18,7 +15,6 @@
   background: #fff;
   width: 180px;
   transition: box-shadow 0.2s ease;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
   animation: pulse 1.5s infinite ease-in-out;
 }
 
