--- a/src/components/ProductList/productList.module.css
+++ b/src/components/ProductList/productList.module.css
@@ -140,3 +140,29 @@
   margin-right: 3px;
   vertical-align: middle;
 }
+
+.grayOverlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 3; /* 뱃지보다 위 */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+}
+
+.overlayText {
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+
+  /* Title/Title1 */
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px; /* 100% */
+  letter-spacing: -0.32px;
+}
